Moving the library to Netbeans

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,24 @@ local.properties
 /local.properties
 /.idea/workspace.xml
 .DS_Store
+
+
+
+#NETBEANS
+
+# NetBeans specific #
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# Class Files #
+*.class
+
+# Package Files #
+*.jar
+*.war
+*.ear
